<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2017-2025 HERE Europe B.V.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~ License-Filename: LICENSE
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.here.xyz</groupId>
    <artifactId>xyz-hub</artifactId>
    <relativePath>../pom.xml</relativePath>
    <version>3.22.3-SNAPSHOT</version>
  </parent>

  <licenses>
    <license>
      <comments>SPDX-License-Identifier: Apache-2.0</comments>
      <distribution>repo</distribution>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <name>XYZ Util</name>
  <description>XYZ shared utilities</description>
  <artifactId>xyz-util</artifactId>
  <packaging>jar</packaging>

  <properties>
    <!-- Compile with Java 11 -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

<!--  <build>-->
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <artifactId>maven-surefire-plugin</artifactId>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <configuration>-->
<!--          <includes>-->
<!--            <include>**/*.class</include>-->
<!--          </includes>-->
<!--        </configuration>-->
<!--      </plugin>-->
<!--    </plugins>-->
<!--  </build>-->

  <dependencies>
    <!-- Vert.x -->
    <dependency>
      <artifactId>vertx-core</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>
    <dependency>
      <artifactId>vertx-config</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>
    <dependency>
      <artifactId>vertx-web-openapi</artifactId>
      <groupId>io.vertx</groupId>
    </dependency>

    <!-- XYZ libraries -->
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>xyz-models</artifactId>
    </dependency>

    <!-- Jackson Libraries -->
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson-version}</version>
    </dependency>

    <!--  Logging libraries -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-jcl</artifactId>
    </dependency>

    <!-- AWS SDKs V2 -->
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>secretsmanager</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>lambda</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>apache-client</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>s3</artifactId>
    </dependency>

    <!-- AWS SDKs -->
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-kms</artifactId>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-java-sdk-secretsmanager</artifactId>
    </dependency>
    <dependency>
      <artifactId>aws-java-sdk-dynamodb</artifactId>
      <groupId>com.amazonaws</groupId>
    </dependency>
    <dependency>
      <artifactId>aws-lambda-java-core</artifactId>
      <groupId>com.amazonaws</groupId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>cloudwatch</artifactId>
    </dependency>

    <!-- DB utils -->
    <dependency>
      <groupId>com.mchange</groupId>
      <artifactId>c3p0</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-dbutils</groupId>
      <artifactId>commons-dbutils</artifactId>
    </dependency>

    <!-- PSQL JDBC driver -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>

    <!-- Util -->
    <dependency>
      <artifactId>guava</artifactId>
      <groupId>com.google.guava</groupId>
    </dependency>
    <dependency>
      <artifactId>gt-main</artifactId>
      <groupId>org.geotools</groupId>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-epsg-hsql</artifactId>
    </dependency>

    <!-- Cache -->
    <dependency>
      <artifactId>expiringmap</artifactId>
      <groupId>net.jodah</groupId>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit-pioneer</groupId>
      <artifactId>junit-pioneer</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>hamcrest</artifactId>
      <groupId>org.hamcrest</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>dnsjava</groupId>
      <artifactId>dnsjava</artifactId>
    </dependency>
  </dependencies>
</project>